[package]
name = "http-mocking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
httpmock = "0.6.6"
reqwest = {version = "0.11.9", features = ["json"]}
serde = "1.0.133"
tokio = "1.15.0"